--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,21 @@
 PORT=3000
 NODE_ENV=development
 LOG_LEVEL=info
+JWT_SECRET=
+JWT_EXPIRES_IN=15m
+JWT_ALGORITHM=HS256
+AUTH_COOKIE_NAME=acquisition_auth_token
+AUTH_COOKIE_MAX_AGE_DAYS=7
+COOKIE_DOMAIN=
+BCRYPT_SALT_ROUNDS=12
+ARCJET_KEY=
+ARCJET_MODE=DRY_RUN
+ARCJET_BOT_ALLOW=CATEGORY:SEARCH_ENGINE
+ARCJET_RATE_REFILL=5
+ARCJET_RATE_INTERVAL_SECONDS=10
+ARCJET_RATE_CAPACITY=10
+ARCJET_SIGNUP_MODE=LIVE
+ARCJET_SIGNUP_INTERVAL=10m
+ARCJET_SIGNUP_MAX=5
+ARCJET_SIGNUP_EMAIL_BLOCK=DISPOSABLE,INVALID,NO_MX_RECORDS
 DATABASE_URL=
